--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,17 @@
   <title>🐡⚔️🛡</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <body></body>
+  <body>
+    <canvas
+      style="
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        touch-action: none;
+      "
+    ></canvas>
+  </body>
   <script src="../dist/bundle.js"></script>
 </html>
