--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,12 @@
         touch-action: none;
       "
     ></canvas>
+
+    <a
+      href="https://github.com/Platane/js13k-2021"
+      style="position: fixed; bottom: 4px; right: 4px"
+      >source</a
+    >
   </body>
   <script src="../dist/bundle.js"></script>
 </html>
