--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,11 @@
   <title>🐡⚔️🛡</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    body {
+      font-family: Helvetica, sans-serif;
+    }
+  </style>
   <body>
     <canvas
       style="
@@ -17,7 +22,7 @@
 
     <a
       href="https://github.com/Platane/js13k-2021"
-      style="position: fixed; bottom: 4px; right: 4px"
+      style="position: fixed; bottom: 0; right: 0; padding: 0 4px"
       >source</a
     >
   </body>
