--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,20 @@
   <title>🐡⚔️🛡</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta
+    property="og:image"
+    content="https://platane.github.io/flour-oh-flour/images/1200x750.jpg"
+  />
+  <meta
+    name="description"
+    content="A pretty blob simulation with zero game play. A game made for the 2021 js13kGames.com competition."
+  />
+  <meta name="title" content="Delph" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
       font-family: Helvetica, sans-serif;
-      background-color: #eee;
+      background-color: #f4f4f0;
     }
   </style>
   <body>
@@ -21,11 +31,50 @@
       "
     ></canvas>
 
-    <a
-      href="https://github.com/Platane/js13k-2021"
-      style="position: fixed; bottom: 0; right: 0; padding: 0 4px"
-      >source</a
+    <footer style="position: fixed; bottom: 0; right: 0; padding: 0 4px">
+      <a id="splash-up" href="#">controls</a>
+      <a href="https://github.com/Platane/js13k-2021">source</a>
+    </footer>
+
+    <div
+      id="splash"
+      style="
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        backdrop-filter: blur(5px);
+        transition: opacity 0.2s ease;
+        padding: 40px;
+        color: #333;
+        background-color: #ffffff66;
+        text-shadow: 0px 0px 3px #f8f8f6;
+        font-size: 1.2em;
+      "
     >
+      <h1>Delph</h1>
+      <span>🐡⚔️🛡</span>
+      <h4>A pretty blob simulation<br />With zero game play</h4>
+
+      <br /><br />
+
+      <h5>Controls:</h5>
+      <ul>
+        <li><b>Left Click</b> to select a blob</li>
+        <li><b>Right Click</b> to command the blob to move</li>
+        <li><b>Drag</b> the blob to split it in half</li>
+        <br />
+        <li>
+          There is no goals, apart from enjoying the graphics
+          <i>(sorry)</i>
+        </li>
+      </ul>
+
+      <br /><br />
+
+      <button id="splash-dismiss" style="padding: 20px">Let's go !</button>
+    </div>
   </body>
   <script src="../dist/bundle.js"></script>
 </html>
