--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,16 @@
         touch-action: none;
       "
     ></canvas>
+    <canvas
+      style="
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        touch-action: none;
+      "
+    ></canvas>
 
     <footer style="position: fixed; bottom: 0; right: 0; padding: 0 4px">
       <a id="splash-up" href="#">controls</a>
